--- a/GroupProject-Annie's garden/FrontEnd/eat-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/eat-index.html
@@ -869,7 +869,7 @@
             </div>
             <div class="guide_extraPages">
                 <div class="pancakePage">
-                    <a href="#">鬆餅小屋</a>
+                    <a href="./pancake-index.html">鬆餅小屋</a>
                 </div>
                 <div class="diyPage">
                     <a href="./diy-index.html">手作Diy</a>
@@ -1024,7 +1024,6 @@
         </div>
         <div class="footer">
             <div class="footer_box">
-
                 <div class="footer_text">
                     <p class="pc_use">營業時間 : 09：00 - 20：00（最晚用餐點單 19：00）</p>
                     <p class="mobile_use">營業時間 : 09：00 - 20：00</p>
@@ -1035,11 +1034,14 @@
                 <div class=" footer_iconGroupBox">
                     <div class="footer_iconGroup">
                         <a href="https://zh-tw.facebook.com/annies0425931567"><img src="./素材/07-icon與logo/FB_icon.png"
-                                alt="" class="footer_fbIcon"></a>
-                        <a href="https://page.line.me/hif9867v"><img src="./素材/07-icon與logo/Line_icon-new.png" alt=""
-                                class="footer_lineIcon"></a>
-                        <img src="./素材/07-icon與logo/IG_icon.png" alt="" class="footer_igIcon">
-                        <img src="./素材/07-icon與logo/Gmail_icon.png" alt="" class="footer_gmailIcon">
+                                alt="" class="footer_fbIcon" title="FB"></a>
+                        <a href="https://page.line.me/hif9867v"><img src="./素材/07-icon與logo/Line_icon.png" alt=""
+                                class="footer_lineIcon" title="Line"></a>
+                        <a href="https://www.instagram.com/explore/locations/246263666/"><img
+                                src="./素材/07-icon與logo/IG_icon.png" alt="" class="footer_igIcon" title="IG">
+                        </a>
+                        <img src="./素材/07-icon與logo/Gmail_icon.png" alt="" class="footer_gmailIcon"
+                            title="annie0942593931567@gmail.com">
                     </div>
                 </div>
             </div>
