--- a/GroupProject-Annie's garden/FrontEnd/info-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/info-index.html
@@ -974,9 +974,6 @@
 
         </div>
         <div class="nav_btnGroup">
-            <!-- <div class="burger_decoration1 burger_decorations"></div>
-            <div class="burger_decoration2 burger_decorations"></div>
-            <div class="burger_decoration3 burger_decorations"></div> -->
             <div class="nav_btn_about nav_btn_space nav_btn ">
                 <a href="./index.html">關於安妮公主</a>
             </div>
@@ -1018,7 +1015,7 @@
             </div>
             <div class="guide_extraPages">
                 <div class="pancakePage">
-                    <a href="#">鬆餅小屋</a>
+                    <a href="./pancake-index.html">鬆餅小屋</a>
                 </div>
                 <div class="diyPage">
                     <a href="./diy-index.html">手作Diy</a>
@@ -1276,15 +1273,19 @@
                     </div>
                     <div class=" footer_iconGroupBox">
                         <div class="footer_iconGroup">
-                            <a href="https://zh-tw.facebook.com/annies0425931567"><img
-                                    src="./素材/07-icon與logo/FB_icon.png" alt="" class="footer_fbIcon"></a>
-                            <a href="https://page.line.me/hif9867v"><img src="./素材/07-icon與logo/Line_icon-new.png"
-                                    alt="" class="footer_lineIcon"></a>
-                            <img src="./素材/07-icon與logo/IG_icon.png" alt="" class="footer_igIcon">
-                            <img src="./素材/07-icon與logo/Gmail_icon.png" alt="" class="footer_gmailIcon">
+                            <a href="https://zh-tw.facebook.com/annies0425931567"><img src="./素材/07-icon與logo/FB_icon.png"
+                                    alt="" class="footer_fbIcon" title="FB"></a>
+                            <a href="https://page.line.me/hif9867v"><img src="./素材/07-icon與logo/Line_icon.png" alt=""
+                                    class="footer_lineIcon" title="Line"></a>
+                            <a href="https://www.instagram.com/explore/locations/246263666/"><img
+                                    src="./素材/07-icon與logo/IG_icon.png" alt="" class="footer_igIcon" title="IG">
+                            </a>
+                            <img src="./素材/07-icon與logo/Gmail_icon.png" alt="" class="footer_gmailIcon"
+                                title="annie0942593931567@gmail.com">
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
     </div>
 
