--- a/GroupProject-Annie's garden/FrontEnd/pancake-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/pancake-index.html
@@ -174,7 +174,7 @@
             </div>
             <div class="guide_extraPages">
                 <div class="pancakePage">
-                    <a href="#">鬆餅小屋</a>
+                    <a href="pancake-index">鬆餅小屋</a>
                 </div>
                 <div class="diyPage">
                     <a href="./diy-index.html">手作Diy</a>
@@ -217,7 +217,6 @@
 
         <div class="footer">
             <div class="footer_box">
-
                 <div class="footer_text">
                     <p class="pc_use">營業時間 : 09：00 - 20：00（最晚用餐點單 19：00）</p>
                     <p class="mobile_use">營業時間 : 09：00 - 20：00</p>
@@ -231,16 +230,14 @@
                                 alt="" class="footer_fbIcon" title="FB"></a>
                         <a href="https://page.line.me/hif9867v"><img src="./素材/07-icon與logo/Line_icon.png" alt=""
                                 class="footer_lineIcon" title="Line"></a>
-                        <a href="https://www.instagram.com/explore/locations/246263666/"><img src="./素材/07-icon與logo/IG_icon.png" alt="" class="footer_igIcon" title="IG">
-                            </a>
-                        <div class="gmail_iconBox" id="gmail_iconBox">
-                        <img src="./素材/07-icon與logo/Gmail_icon.png" alt="" class="footer_gmailIcon" title="annie0942593931567@gmail.com">
-                        </div>
+                        <a href="https://www.instagram.com/explore/locations/246263666/"><img
+                                src="./素材/07-icon與logo/IG_icon.png" alt="" class="footer_igIcon" title="IG">
+                        </a>
+                        <img src="./素材/07-icon與logo/Gmail_icon.png" alt="" class="footer_gmailIcon"
+                            title="annie0942593931567@gmail.com">
                     </div>
                 </div>
             </div>
-
-         
         </div>
     </div>
 
