--- a/GroupProject-Annie's garden/FrontEnd/eat-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/eat-index.html
@@ -630,7 +630,10 @@
                 margin-top: 100px;
                 padding-top: 100px;
                 padding-bottom: 100px;
-                background-color: #F6D3E2;
+                background-image: url("./素材/04-主廚上菜/57-01.png");
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
                 height: unset;
             }
 
@@ -644,7 +647,10 @@
                 margin-top: 100px;
                 padding-top: 100px;
                 padding-bottom: 100px;
-                background-color: #F6D3E2;
+                background-image: url("./素材/04-主廚上菜/57-01.png");
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
                 height: unset;
             }
 
@@ -814,6 +820,9 @@
                 height: unset;
                 margin-top: 100px;
             }
+           
+           
+ 
         }
     </style>
 </head>
