--- a/GroupProject-Annie's garden/FrontEnd/index.html
+++ b/GroupProject-Annie's garden/FrontEnd/index.html
@@ -201,6 +201,11 @@
         }
 
         @media (max-width:550px) {
+            /* .page_1_banner {
+        
+            background-image: url("./素材/01-首頁/main_annie_new.png");
+          
+        } */
             .about_titleBox {
                 margin: 30px auto 0px;
             }
