--- a/GroupProject-Annie's garden/FrontEnd/eat-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/eat-index.html
@@ -761,6 +761,7 @@
             }
 
             .eat_suggest::after {
+                width: 140%;
                 bottom: -49px;
             }
 
