--- a/GroupProject-Annie's garden/FrontEnd/guide-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/guide-index.html
@@ -462,6 +462,7 @@
         }
 
         @media (max-width: 1110px) {
+            
             .imgBox_Map {
                 width: 762px;
                 height: 488px;
@@ -497,7 +498,7 @@
             }
         }
 
-        @media (max-width:750px) {
+        @media (max-width:768px) {
             .pc_box {
                 display: none;
             }
@@ -768,7 +769,7 @@
                 </div>
 
                 <div class="trigger_imgBox3 triggerBoxs">
-                    <a href="./wedding-index.html">
+                    <a href="./pancake-index.html">
                         <img src="./素材/03-園區導覽/map_icon_pancake-new.png" alt="" title="鬆餅 我來測試看看拉哈哈哈哈">
                     </a>
                 </div>
