--- a/GroupProject-Annie's garden/FrontEnd/diy-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/diy-index.html
@@ -1017,7 +1017,7 @@
             grabCursor: true,
             updateOnWindowResize: true,
             speed: 3500,
-
+            loop: true,
             navigation: {
                 nextEl: '.swiper-button-next',
                 prevEl: '.swiper-button-prev',
@@ -1033,7 +1033,7 @@
             grabCursor: true,
             updateOnWindowResize: true,
             speed: 3500,
-
+            loop: true,
             navigation: {
                 nextEl: '.swiper-button-next',
                 prevEl: '.swiper-button-prev',
@@ -1049,7 +1049,7 @@
             grabCursor: true,
             updateOnWindowResize: true,
             speed: 3500,
-
+            loop: true,
             navigation: {
                 nextEl: '.swiper-button-next',
                 prevEl: '.swiper-button-prev',
