--- a/GroupProject-Annie's garden/FrontEnd/eat-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/eat-index.html
@@ -939,15 +939,15 @@
         <div class="page4_specialContainerGroup">
             <div class="page4_specialContainer eat_show1">
 
-                <div class="imgBox ">
+                <div class="imgBox " data-aos="fade-down" data-aos-duration="900">
                     <img src="./素材/04-主廚上菜/restaurant_pork.jpg" alt="" class="">
                 </div>
-                <div class="decorationBox"></div>
-                <div class="titleBox">
+                <div class="decorationBox" data-aos="fade-left" data-aos-duration="1300"></div>
+                <div class="titleBox" data-aos="fade-up" data-aos-duration="1200">
                     <div class="decoration"></div>
                     <p>德國豬腳</p>
                 </div>
-                <div class="textBox">
+                <div class="textBox" data-aos="fade-up" data-aos-duration="1200">
                     <p>公主一手抓著月桂葉，一手抓著家傳秘訣食譜，</p>
                     <p>仔細地將月桂葉、百里香、丁香這些香料跟脂肪較厚的豬後小腿，</p>
                     <p>用力的搓揉，將一隻隻的後小腿封存醃製!</p>
@@ -958,15 +958,15 @@
             </div>
             <div class="page4_specialContainer eat_show2">
 
-                <div class="imgBox">
+                <div class="imgBox" data-aos="fade-right" data-aos-duration="900">
                     <img src="./素材/04-主廚上菜/restaurant_chicken.JPG" alt="">
                 </div>
                 <div class="decorationBox"></div>
-                <div class="titleBox">
+                <div class="titleBox" data-aos="fade-left"  data-aos-duration="1200">
                     <div class="decoration"></div>
                     <p>烤春雞</p>
                 </div>
-                <div class="textBox">
+                <div class="textBox" data-aos="fade-left"  data-aos-duration="1200">
                     <p>安妮特別訂了出生才一個月左右小鮮肉的雞，肉質細嫩鮮美，</p>
                     <p>比一般放山雞體型比較小很多、骨架也比較軟，</p>
                     <p>摘了些百里香、迷迭香、茴香、鼠尾草，帶著這些香草，洗滌了幾次，</p>
@@ -976,12 +976,12 @@
             </div>
             <div class="page4_specialContainer eat_show3">
 
-                <div class="imgBox">
+                <div class="imgBox" data-aos="fade-down" data-aos-duration="900">
                     <img src="./素材/04-主廚上菜/restaurant_steak.jpg" alt="">
                 </div>
-                <div class="decorationBox"></div>
+                <div class="decorationBox" data-aos="fade-left" data-aos-duration="1300"></div>
                 <div class="titleBox">
-                    <div class="decoration"></div>
+                    <div class="decoration" data-aos="fade-left" data-aos-duration="1200"></div>
                     <p>紅磚牛排</p>
                 </div>
                 <div class="textBox">
@@ -993,17 +993,17 @@
                     <p>連皮帶肉搭配酸白菜、黃芥末的一口! 真期待!</p>
                 </div>
             </div>
-            <div class="page4_specialContainer eat_show4 ">
+            <div class="page4_specialContainer eat_show4" >
 
-                <div class="imgBox">
+                <div class="imgBox" data-aos="fade-right" data-aos-duration="900">
                     <img src="./素材/04-主廚上菜/restaurant_casserole.jpg" alt="">
                 </div>
-                <div class="decorationBox"></div>
-                <div class="titleBox">
-                    <div class="decoration"></div>
+                <!-- <div class="decorationBox" data-aos="fade-left"  data-aos-duration="1300"></div> -->
+                <div class="titleBox"data-aos="fade-left"  data-aos-duration="1200">
+                    <div class="decoration" ></div>
                     <p>野菇焗烤飯</p>
                 </div>
-                <div class="textBox">
+                <div class="textBox" data-aos="fade-left"  data-aos-duration="1200">
                     <p>安妮特別訂了出生才一個月左右小鮮肉的雞，肉質細嫩鮮美，</p>
                     <p>比一般放山雞體型比較小很多、骨架也比較軟，</p>
                     <p>摘了些百里香、迷迭香、茴香、鼠尾草，帶著這些香草，洗滌了幾次，</p>
@@ -1013,15 +1013,15 @@
             </div>
             <div class="page4_specialContainer  eat_show5 ">
 
-                <div class="imgBox">
+                <div class="imgBox" data-aos="fade-down" data-aos-duration="900">
                     <img src="./素材/04-主廚上菜/restaurant_pasta.jpg" alt="">
                 </div>
-                <div class="decorationBox"></div>
-                <div class="titleBox">
+                <div class="decorationBox" data-aos="fade-left" data-aos-duration="1300"></div>
+                <div class="titleBox" data-aos="fade-left" data-aos-duration="1200">
                     <div class="decoration"></div>
                     <p>番茄海鮮義大利麵</p>
                 </div>
-                <div class="textBox">
+                <div class="textBox" data-aos="fade-left" data-aos-duration="1200">
                     <p>公主一手抓著月桂葉，一手抓著家傳秘訣食譜，</p>
                     <p>仔細地將月桂葉、百里香、丁香這些香料跟脂肪較厚的豬後小腿，</p>
                     <p>用力的搓揉，將一隻隻的後小腿封存醃製!</p>
