--- a/GroupProject-Annie's garden/FrontEnd/princess-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/princess-index.html
@@ -1074,6 +1074,8 @@
             grabCursor: true,
             updateOnWindowResize: true,
             speed: 3500,
+            loop: true,
+
             navigation: {
                 nextEl: '.swiper-button-next',
                 prevEl: '.swiper-button-prev',
