--- a/GroupProject-Annie's garden/FrontEnd/wedding-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/wedding-index.html
@@ -552,7 +552,7 @@
             </div>
         </div>
         <div class="wedding_themeGroup">
-            <div class="wedding_theme_l wedding_theme">
+            <div class="wedding_theme_l wedding_theme" data-aos="fade-down" data-aos-easing="linear"data-aos-duration="900">
                 <div class="wedding_theme_titleBox">
                     <div class="wedding_theme_titleText">婚禮花絮</div>
                     <div class="wedding_theme_titleBox_decorationBox"></div>
@@ -566,7 +566,7 @@
                     <img src="./素材/05-見證幸福/wedding_BTS.jpg" alt="" class="wedding_img">
                 </div>
             </div>
-            <div class="wedding_theme_m wedding_theme">
+            <div class="wedding_theme_m wedding_theme" data-aos="fade-down" data-aos-easing="linear"data-aos-duration="1500">
                 <div class="wedding_theme_titleBox">
                     <div class="wedding_theme_titleText">求婚告白</div>
                     <div class="wedding_theme_titleBox_decorationBox"></div>
@@ -580,7 +580,7 @@
                     <img src="./素材/05-見證幸福/wedding_photo.jpg" alt="" class="wedding_img">
                 </div>
             </div>
-            <div class="wedding_theme_r wedding_theme">
+            <div class="wedding_theme_r wedding_theme" data-aos="fade-down" data-aos-easing="linear"data-aos-duration="2100">
                 <div class="wedding_theme_titleBox">
                     <div class="wedding_theme_titleText">婚紗拍攝</div>
 
@@ -999,7 +999,7 @@
                 grabCursor: true,
                 updateOnWindowResize: true,
                 speed: 3500,
-
+                loop: true,
                 navigation: {
                     nextEl: '.swiper-button-next',
                     prevEl: '.swiper-button-prev',
@@ -1015,7 +1015,7 @@
                 grabCursor: true,
                 updateOnWindowResize: true,
                 speed: 3500,
-
+                loop: true,
                 navigation: {
                     nextEl: '.swiper-button-next',
                     prevEl: '.swiper-button-prev',
@@ -1031,7 +1031,7 @@
                 grabCursor: true,
                 updateOnWindowResize: true,
                 speed: 3500,
-
+                loop: true,
                 navigation: {
                     nextEl: '.swiper-button-next',
                     prevEl: '.swiper-button-prev',
