--- a/GroupProject-Annie's garden/FrontEnd/guide-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/guide-index.html
@@ -146,6 +146,10 @@
             position: relative;
         }
 
+        .map_moblieLink {
+            display: none;
+        }
+
         .trigger_imgBox1 {
             position: absolute;
             width: 355px;
@@ -678,6 +682,19 @@
                 display: none;
             }
 
+            .map_moblieLink {
+                display: block;
+                font-size: 14px;
+                letter-spacing: 3px;
+                width: 246px;
+                text-align: center;
+                margin: 20px auto 20px;
+            }
+            .map_LinkText{
+                display: inline-block;
+                color: #513508;
+                cursor: pointer;
+            }
             .swiperBox {
                 height: 221px;
                 max-width: 620px;
@@ -700,7 +717,7 @@
             }
         }
 
-        @media (max-width:550px) {
+        @media (max-width:576px) {
 
             .guide_title {
                 font-size: 23px;
@@ -729,8 +746,7 @@
             }
 
             .page_3_mapBox {
-
-                margin: 0px auto 86px;
+                margin: 0px auto 65px;
             }
 
             .ecology_titleBox {
@@ -946,6 +962,14 @@
                     <img src="./素材/03-園區導覽/告示牌.png" alt="" title="我來測試看看拉哈哈哈哈">
                 </div>
 
+            </div>
+            <div class="map_moblieLink">
+          
+            <p> <a href="./eat-index.html" class="map_LinkText">主題餐廳 </a> | <a href="./wedding-index.html" class="map_LinkText" >戶外婚禮</a> |<a href="./pancake-index.html" class="map_LinkText">鬆餅小屋</a> </p>
+                <!-- <a href="./wedding-index.html">戶外婚禮</a> | 
+                <a href="./pancake-index.html">鬆餅小屋</a>  -->
+              
+                <p>手作DIY | 公主故事屋</p>
             </div>
         </div>
         <div class="box_container  ">
